--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+unbind r
+bind r source-file ~/.tmux.conf
+
 set-option -g default-terminal 'screen-256color'
 set-option -g terminal-overrides ',xterm-256color:RGB'
 
@@ -8,7 +11,6 @@ set -g escape-time 0
 set -g history-limit 1000000
 set -g set-clipboard on
 set -g renumber-windows on
-set -g prefix C-s
 set -g escape-time 0            
 set -g history-limit 1000000
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
@@ -45,3 +47,4 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
