--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,6 +1,3 @@
-import = [
-    "~/.config/alacritty/themes/catppuccin-mocha.toml"
-]
 
 [env]
 TERM = "xterm-256color"
@@ -31,3 +28,8 @@ style = "Bold Italic"
 [font.italic]
 family = "MesloLGS Nerd Font Mono"
 style = "Italic"
+
+[general]
+import = [
+    "~/.config/alacritty/themes/catppuccin-mocha.toml"
+]
